--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a >Home</a>
             <a >About</a>
             <a >Service</a>
-            <a href="https://wa.link/9h3tcb">Contact Us on whatsapp</a>
+            <a href="#">Contact Us on whatsapp</a>
             <a href="mailto:riteshsoni35468@gmail.com">Email</a>
         </div>
 
