--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </div>
     </div>
 
-    <div class="main">   
+    <div class="main">  
+        <div class="home">
         <div class="card" id="myElement">
             <div>
                 <span class="close_icon" onclick="hideCard()"> <ion-icon name="close-outline"></ion-icon> </span>
@@ -111,10 +112,25 @@
                 </form>
                 </div>
         </div>
+        </div> 
+
+        <div class="about">
+    
+        </div>
     </div>
 
     <div class="footer">
-        
+        <div>
+            <a >Home</a>
+            <a >About</a>
+            <a >Service</a>
+            <a href="#">Contact Us on whatsapp</a>
+            <a href="mailto:riteshsoni35468@gmail.com">Email</a>
+        </div>
+
+        <div>
+            <button class="btn_login_popup" onclick="showLoginCard()">Login</button>
+        </div>
     </div>
 
 
