--- a/index.html
+++ b/index.html
@@ -115,21 +115,16 @@
         </div> 
 
         <div class="about">
-    
+           
         </div>
     </div>
 
     <div class="footer">
-        <div>
-            <a >Home</a>
-            <a >About</a>
-            <a >Service</a>
-            <a href="#">Contact Us on whatsapp</a>
-            <a href="mailto:riteshsoni35468@gmail.com">Email</a>
-        </div>
-
-        <div>
-            <button class="btn_login_popup" onclick="showLoginCard()">Login</button>
+        <p>Get in Touch</p>
+        <div class="social-links">
+           <a href="">Instagram</a>
+           <a href="">Linkdin</a>
+           <a href="">Whatsapp</a>
         </div>
     </div>
 
