--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
         </div> 
 
         <div class="about">
-           
+            <p>hlooooooooooooooo</p>
+            <p>hlooooooooooooooo</p>
+            <p>hlooooooooooooooo</p>
+            <p>hlooooooooooooooo</p>
         </div>
     </div>
 
