--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a >Home</a>
             <a >About</a>
             <a >Service</a>
-            <a href="#">Contact Us on whatsapp</a>
+            <a href="#">Contact Us</a>
             <a href="mailto:riteshsoni35468@gmail.com">Email</a>
         </div>
 
@@ -124,6 +124,22 @@
                 <li>I specialize in technologies like HTML, CSS, JavaScript etc. and i'm constantly learning new tools and frameworks to improve my skils.</li>
                 <li>I'm always excited to work on new and challenging projects. Let's build somethhing amezing together!</li>
             </div>
+        </div>
+
+        <div class="contact">
+            <h1>contact</h1>
+
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="bca71ee4-8221-4f20-a52f-798f99f64b27">
+                <input type="text" placeholder="Name" name="Name" maxlength="18" required>
+                <input type="email" placeholder="Email" name="Email"required>
+                <input type="tel" placeholder="Phone" name="Phone" minlength="10" maxlength="10" required>
+                <textarea placeholder="Message" rows="5" cols="1" name="massage" minlength="15" required></textarea>
+                
+                <div class="button">
+                    <button type="submit" class="contact-btn">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 
