--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="header-links">
-            <a onclick="showHome()">Home</a>
+            <a onclick="showHome(), showRegisterCard()">Home</a>
             <a onclick="showAbout()">About</a>
             <a >Service</a>
             <a onclick="showContact()">Contact</a>
@@ -26,11 +26,11 @@
                 <button onclick="closeSidebar()">x</button>
             </div>
 
-            <a href="#" onclick="showHome(), closeSidebar()">Home</a>
+            <a href="#" onclick="showHome(), closeSidebar(), showRegisterCard()">Home</a>
             <a href="#" onclick="showAbout(), closeSidebar()">About</a>
             <a href="#" >Service</a>
             <a href="#" onclick="showContact(), closeSidebar()">Contact</a>
-            <a href="#" href="mailto:riteshsoni35468@gmail.com">Email</a>
+            <a href="mailto:riteshsoni35468@gmail.com">Email</a>
         </div>
 
         <div id="header-login-btn">
