--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="header-links">
             <a onclick="showHome(), showRegisterCard()">Home</a>
             <a onclick="showAbout()">About</a>
@@ -38,7 +38,7 @@
         <div id="header-login-btn">
             <button class="btn_login_popup" onclick="showLoginCard(), closeSidebar()">Login</button>
         </div>
-    </div>
+    </header>
 
     <div class="main">  
         <div class="home" id="home">
@@ -161,14 +161,14 @@
         </div>
     </div>
 
-    <div class="footer">
+    <footer>
         <p>Get in Touch</p>
         <div class="social-links">
-           <a href="">Instagram</a>
-           <a href="">Linkdin</a>
-           <a href="">Whatsapp</a>
+            <a href="">Instagram</a>
+            <a href="">Linkdin</a>
+            <a href="">Whatsapp</a>
         </div>
-    </div>
+    </footer>
 
 
         <script src="script.js"></script>
