--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <h2>My Coding Journey:</h2>
                 <li>Hii, I'm Ritesh soni, a passionate and creative developer with a strong background in Frontend Development. I love building web applications that are fast , and user friendly.</li>
                 <li>I specialize in technologies like HTML, CSS, JavaScript etc. and i'm constantly learning new tools and frameworks to improve my skils.</li>
+                <li>I specialize in technologies like HTML, CSS, JavaScript etc. and i'm constantly learning new tools and frameworks to improve my skils.</li>
             </div>
         </div>
 
